<resources>
    <string name="app_name">Calculator</string>
    <string name="seven">7</string>
    <string name="multiplication">X</string>
    <string name="four">4</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="three">3</string>
    <string name="comma">,</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="minus">-</string>
    <string name="equally">=</string>
    <string name="discharge">С</string>
    <string name="resetOne"><![CDATA[<-]]></string>
    <string name="split">/</string>
    <string name="InitValue">0</string>
    <string name="plus_minus">+/-</string>
    <string name="title_settings">Here you can choose a theme for your application</string>
    <string name="light_settings">Light</string>
    <string name="night_settings">Night</string>
    <string name="button_apply">apply</string>
</resources>